fixed awkward  spacing on portfolio items

--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -65,7 +65,7 @@
 .portfolio-item-inner {
   transition: .2s all;
   border: 3px solid $c-prim-light;
-  padding: 3% 5% 5% 5%;
+  padding: 10px 10px 0 10px;
   border-radius: 2px;
   &:hover {
     transform: translateY(-1em);
