--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@
 .portfolio-item-inner {
   transition: .2s all;
   border: 3px solid #e2eaf0;
-  padding: 3% 5% 5% 5%;
+  padding: 10px 10px 0 10px;
   border-radius: 2px; }
   .portfolio-item-inner:hover {
     transform: translateY(-1em); }
